2006-04-13  Albert Chu <chu11@llnl.gov>

	* fish/src/extension.c (install_new_procedures): Fix function name
	typo.

	* libfreeipmi/src/ipmi-utils.c (ipmi_check_completion_code): Fix
	compile bug.

	* freeipmi.spec.in: Fix package requirement gcrypt -> libgcrypt.

	* libfreeipmi/src/ipmi-rmcpplus-support-and-payload-cmds.c: Add
	forgotten reserved fields to tmpl_get_channel_payload_support_rs.
	
2006-04-12  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Add work to support both interpretations of the
	"cipher suite id privilege level".

	* ipmipower/: Add one more intel IPMI 2.0 workaround.

	* ipmipower/: Add --no-get-channel-cipher-suites workaround.

	* libfreeipmi/src/ipmi-message-support-cmds.c
	(fill_cmd_set_channel_security_keys), fish/: Fixes added to
	support K-R and K-G checkout and configuration.

	* ipmipower/: Check k_g status during authentication capabilities
	stage.

	* ipmiping/: Support k_g output on verbose.

	* ipmipower/src/ipmipower_powercmd.c (_recv_packet): Return error
	on rakp2 or rakp4 hash errors.

	* fish/src/scm-procedures.c (ex_set_bmc_user_sol_payload_access):
	Fix enable/disable bug.
	
2006-04-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus.c (fill_rmcpplus_rakp_message_1):
	Fix compliance bug.

	* libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds.h,
	libfreeipmi/src/ipmi-messaging-support-cmds.c
	(fill_cmd_set_user_password_v20),
	libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c: Support
	password size parameter.

	* fish/: Support 'Password20' bmc-config option.

	* ipmipower/: Remove --cipher-suite-records-all-oem option.
	Migrate workaround into --intel-2-0-session option.  Implement
	additional username padding workarounds for Intel.

	* libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c
	(ipmi_cmd_get_session_challenge, ipmi_cmd_activate_session,
	ipmi_cmd_set_session_privilege_level): Fix errno codes.

	* ipmipower/: Version auto picks ipmi 1.5 over ipmi 2.0.

	* common/src/Makefile.am,